@@ -1,21 +1,46 @@
 package refuel.json.bench
 
 import java.io.File
+import java.util.concurrent.TimeUnit
 
-import org.openjdk.jmh.annotations.{Benchmark, State}
+import org.openjdk.jmh.annotations._
 import refuel.json.bench.Foo._
-import refuel.json.tokenize.decoded.{DecodedJsonRaw, DecodedJsonTokenizer}
+import refuel.json.tokenize.decoded.DecodedJsonRaw
 import refuel.json.{Codec, CodecDef, JsonTransform}
 
 import scala.io.Source
 
-@State(org.openjdk.jmh.annotations.Scope.Benchmark)
+@State(Scope.Benchmark)
+@BenchmarkMode(Array(Mode.AverageTime))
+@OutputTimeUnit(TimeUnit.MILLISECONDS)
+@Warmup(iterations = 10, time = 1, timeUnit = TimeUnit.SECONDS)
+@Measurement(iterations = 10, time = 1, timeUnit = TimeUnit.SECONDS)
+@Fork(
+  value = 1,
+  jvmArgs = Array(
+    "-server",
+    "-Xms1g",
+    "-Xmx1g",
+    "-XX:NewSize=512m",
+    "-XX:MaxNewSize=512m",
+    "-XX:InitialCodeCacheSize=256m",
+    "-XX:ReservedCodeCacheSize=256m",
+    "-XX:+UseParallelGC",
+    "-XX:-UseAdaptiveSizePolicy",
+    "-XX:MaxInlineLevel=18",
+    "-XX:-UseBiasedLocking",
+    "-XX:+AlwaysPreTouch",
+    "-XX:+UseNUMA",
+    "-XX:-UseAdaptiveNUMAChunkSizing"
+  )
+)
 class Bench extends JsonTransform with CodecDef {
+  val xxx                          = CaseClassCodec.from[Hoge]
   implicit val _codec: Codec[Root] = "root".parsed(seq(CaseClassCodec.from[Hoge])).apply(Root.apply)(Root.unapply)
 
   val source = Source
     .fromFile(
-      new File("/Users/takagi/src/refuel/refuel-json/src/test/resources/test.json"),
+      new File("/Users/giiita/src/refuel/refuel-json/src/test/resources/test.json"),
       "UTF-8"
     )
     .getLines()
